added endpoints for missing ingredients, rating info